--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js"></script>
 
-    <!-- Your web app's Firebase configuration -->
-    <!-- For Firebase JS SDK v7.20.0 and later, measurementId is optional -->
+    <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
     apiKey: "AIzaSyBHfz0K4tbOD3APaFHilvbavKE0Umec3qg",
     authDomain: "delme-temp-temp.firebaseapp.com",
@@ -20,8 +21,7 @@
     measurementId: "G-Y5EWX4D2LW"
     };
 
-    <script>
-        <!-- Initialize Firebase -->
+    <!-- Initialize Firebase -->
         const app = initializeApp(firebaseConfig);
         const analytics = getAnalytics(app);
     </script>
