--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         // Wait until DOM is ready
         window.addEventListener('DOMContentLoaded', () => {
-            document.getElementById('contactForm').addEventListener('submit', function(e) {
+            document.getElementById('RCS_form').addEventListener('submit', function(e) {
                 e.preventDefault();
 
                 const name = document.getElementById('name').value;
@@ -52,7 +52,11 @@
 </head>
 
 <body>
-    <form id="contactForm">
+    <form id="RCS_form">
+        <input type="text", id="from", placeholder="Your company" required>
+        <input type="text", id="relatedDoc", placeholder="related document" required>
+        <input type="question", id="question", placeholder="enter question" required>
+        <input type="responsible", id="responsible", placeholder="enter responsible" required>
         <input type="text" id="name" placeholder="Your name" required>
         <input type="email" id="email" placeholder="Your email" required>
         <button type="submit">Send</button>
