--- a/index.html
+++ b/index.html
@@ -1,65 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>RCS</title>
+<link rel="stylesheet" href="https://codemirror.net/lib/codemirror.css">
+<script src="https://codemirror.net/lib/codemirror.js"></script>
+<script src="https://codemirror.net/keymap/vim.js"></script>
 
-    <!-- Firebase SDKs -->
-    <script type="module">
-        // Import Firebase functions from CDN
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
-        import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
+<textarea id="vimEditor"></textarea>
 
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyBHfz0K4tbOD3APaFHilvbavKE0Umec3qg",
-            authDomain: "delme-temp-temp.firebaseapp.com",
-            databaseURL: "https://delme-temp-temp-default-rtdb.firebaseio.com",
-            projectId: "delme-temp-temp",
-            storageBucket: "delme-temp-temp.appspot.com",
-            messagingSenderId: "550084636339",
-            appId: "1:550084636339:web:92788f059ad80476dccac6",
-            measurementId: "G-Y5EWX4D2LW"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const database = getDatabase(app);
-
-        // Wait until DOM is ready
-        window.addEventListener('DOMContentLoaded', () => {
-            document.getElementById('RCS_form').addEventListener('submit', function(e) {
-                e.preventDefault();
-
-                const name = document.getElementById('name').value;
-                const email = document.getElementById('email').value;
-
-                // Write to database
-                push(ref(database, 'submissions'), {
-                    name: name,
-                    email: email,
-                    timestamp: Date.now()
-                })
-                .then(() => {
-                    alert('Form submitted successfully!');
-                })
-                .catch((error) => {
-                    alert('Error: ' + error.message);
-                });
-            });
-        });
-    </script>
-</head>
-
-<body>
-    <form id="RCS_form">
-        <input type="text", id="from", placeholder="Your company" required>
-        <input type="text", id="relatedDoc", placeholder="related document" required>
-        <input type="question", id="question", placeholder="enter question" required>
-        <input type="responsible", id="responsible", placeholder="enter responsible" required>
-        <input type="text" id="name" placeholder="Your name" required>
-        <input type="email" id="email" placeholder="Your email" required>
-        <button type="submit">Send</button>
-    </form>
-</body>
-</html>
+<script>
+  const editor = CodeMirror.fromTextArea(document.getElementById("vimEditor"), {
+    lineNumbers: true,
+    keyMap: "vim",
+    mode: "text/plain"
+  });
+</script>
